# HN_han

./: #0#  #han_test_nve.py#  .gitignore  LOGG_BYT  Pipfile  README.md  aidon_date_time.py  bin2hex.py  comport.py  fromc.c  han_test_nve.py  han_utils.py  hdlc.py  hexifybin.pl  jaws  jaws.txt  jaws2  kunde.txt  list1.txt  list2.txt  list3.txt  pyproject.toml  rawlog-John’s MacBook Pro.txt  rawlog.txt  rawlogfile_binary.txt  rawlogfile_bytes  reader.py  ringbuffer.txt
Dotnet/: HAN-reader.csproj  Program.cs
new_reader/: list1.txt  rawlog.txt  rawlogfile_binary.txt  rawlogfile_bytes  ringbuffer.txt
old_reader/: list1.txt  list2.txt  rawlog.txt  rawlogfile_binary.txt  rawlogfile_bytes  ringbuffer.txt
output/: 0203 0906 010034 07 00 ff 12 0297 0202 0.txt  jaws.txt  kunde.txt  list1.txt  list2.txt  list3.txt  list3_strings.txt  rawlog.txt  rawlogfile_binary.txt  rawlogfile_bytes  ringbuffer.txt
xx/: 7359992921021351_RoofTop_Run4_SkyFri_Hardware_rawlog.txt  7359992921021351_RoofTop_Run4_SkyFri_Hardware_rawlog.txt_decoded.txt  7359992921021351_rawlogfile_binary.txt  7359992921021351_rawlogfile_binary.txt_decoded.txt  7359992925175036_rawlogfile_binary.txt  7359992925175036_rawlogfile_binary.txt_decoded.txt  7359992925184519_rawlogfile_binary.txt  7359992925184519_rawlogfile_binary.txt_decoded.txt  kabelføring_1_rawlogfile_binary.txt  kabelføring_1_rawlogfile_binary.txt_decoded.txt  kabelføring_2_rawlogfile_binary.txt  kabelføring_2_rawlogfile_binary.txt_decoded.txt  kabelføring_3_rawlogfile_binary.txt  kabelføring_3_rawlogfile_binary.txt_decoded.txt  toAre
