[tool.poetry]
name = "hn_han"
version = "2.14.0"
description = "Basic reading of information from Aidon HAN ports."
authors = ["John Asmund Westberg <thejaws@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
asyncio = "^3.4.3"
pyserial-asyncio = "^0.6"
construct = "^2.10.68"
black = "^24.4.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pydocstyle = "^6.3.0"

[tool.black]
line-length = 119

[tool.autopep8]
max_line_length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
